tests/integration/typechecking/return_top_level_error.june
// error: outside of a function

return 9